--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
-
- {
+{
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
@@ -24,15 +23,16 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "lucide-react": "^0.462.0",
+    "next": "^15.5.4",
     "next-themes": "^0.3.0",
+    "prettier": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7",
-     "prettier": "^3.6.2"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -54,4 +54,3 @@
     "vite": "^5.4.1"
   }
 }
-
